# VolumeBackup

./: .gitignore  .gitmodules  BlockingQueue.h  CMakeLists.txt  GetOption.cpp  GetOption.h  Logger.h  README.md  VolumeBackup.cpp  VolumeBackup.h  VolumeBackupContext.cpp  VolumeBackupContext.h  VolumeBackupImpl.cpp  VolumeBackupImpl.h  VolumeBackupUtils.cpp  VolumeBackupUtils.h  VolumeBlockAllocator.cpp  VolumeBlockAllocator.h  VolumeBlockHasher.cpp  VolumeBlockHasher.h  VolumeBlockReader.cpp  VolumeBlockReader.h  VolumeBlockWriter.cpp  VolumeBlockWriter.h  VolumeCopyReader.cpp  VolumeProtector.py  cgetopt.h  main.cpp  vbackup.cpp  vbkup.cpp  vcopymount.cpp  voltool.cpp
.github/workflows/: cmake-multi-platform.yml
cli/: CMakeLists.txt  GetOption.cpp  GetOption.h  vbackup.cpp  vchecksum.cpp  vcopymount.cpp  vshow.cpp  vtools.cpp
demo/: vbackup.cpp  vcopymount.cpp  vtools.cpp
docs/: BuildDoxygen.cmake  Doxyfile
extension/java/: CMakeLists.txt  JLinuxCopyMountProvider.h  JLinuxCopyMountProvider.java  JLinuxVolumeCopyMountProvider.cpp  JLinuxVolumeCopyMountProvider.h  JLinuxVolumeCopyMountProvider.java  JVolumeCopyMountUtil.cpp  JVolumeCopyMountUtil.h  JVolumeCopyMountUtil.java  MountDemo.Java
extension/java/volumebackup/mount/: JLinuxVolumeCopyMountProvider.java
extension/python/: PyVolumeProtector.py
include/: BlockingQueue.h  CopyMountProvider.h  DeviceMapperCopyMountProvider.h  ImageCopyMountProvider.h  LinuxVolumeCopyMountProvider.h  Logger.h  NativeIOInterface.h  SystemIOInterface.h  TaskResourceManager.h  VirtualDiskCopyMountProvider.h  VolumeBackup.h  VolumeBackupImpl.h  VolumeBackupTask.h  VolumeBackupUtils.h  VolumeBlockHasher.h  VolumeBlockReader.h  VolumeBlockWriter.h  VolumeCheckpointManager.h  VolumeCopyMountProvider.h  VolumeProtectMacros.h  VolumeProtectTaskContext.h  VolumeProtectTaskImpl.h  VolumeProtector.h  VolumeRestoreTask.h  VolumeUtils.h  Win32VolumeCopyMountProvider.h
include/common/: BlockingQueue.h  VolumeProtectMacros.h  VolumeUtils.h
include/dm/: DeviceMapper.h  DeviceMapperControl.h  LoopDevice.h  LoopDeviceControl.h
include/native/: DeviceMapperControl.h  FileSystemAPI.h  LoopDeviceControl.h  NativeIOInterface.h  RawIO.h  SystemAPI.h  TaskResourceManager.h
include/native/linux/: BlockProbeUtils.h  DeviceMapperControl.h  LinuxDeviceMapperMountProvider.h  LinuxLoopbackMountProvider.h  LinuxMountUtils.h  LoopDeviceControl.h  LvmUtils.h  PosixRawIO.h
include/native/win32/: VhdMountProvider.h  Win32RawIO.h  Win32VirtualDiskMountProvider.h
include/task/: VolumeBackupTask.h  VolumeBlockHasher.h  VolumeBlockReader.h  VolumeBlockWriter.h  VolumeProtectTaskContext.h  VolumeRestoreTask.h  VolumeZeroCopyRestoreTask.h
src/: CopyMountProvider.cpp  DeviceMapperCopyMountProvider.cpp  ImageCopyMountProvider.cpp  Logger.cpp  NativeIOInterface.cpp  SystemIOInterface.cpp  TaskResourceManager.cpp  VirtualDiskCopyMountProvider.cpp  VolumeBackup.cpp  VolumeBackupContext.cpp  VolumeBackupImpl.cpp  VolumeBackupTask.cpp  VolumeBackupUtils.cpp  VolumeBlockHasher.cpp  VolumeBlockReader.cpp  VolumeBlockWriter.cpp  VolumeCheckpointManager.cpp  VolumeCopyMountProvider.cpp  VolumeProtectTaskContext.cpp  VolumeProtectTaskImpl.cpp  VolumeProtector.cpp  VolumeRestoreTask.cpp  VolumeUtils.cpp  Win32VolumeCopyMountProvider.cpp
src/common/: VolumeUtils.cpp
src/dm/: DeviceMapper.cpp  DeviceMapperControl.cpp  LoopDevice.cpp  LoopDeviceControl.cpp
src/native/: DeviceMapperControl.cpp  FileSystemAPI.cpp  LoopDeviceControl.cpp  NativeIOInterface.cpp  RawIO.cpp  SystemAPI.cpp  TaskResourceManager.cpp
src/native/linux/: BlockProbeUtils.cpp  DeviceMapperControl.cpp  LinuxDeviceMapperMountProvider.cpp  LinuxLoopbackMountProvider.cpp  LinuxMountUtils.cpp  LoopDeviceControl.cpp  PosixRawIO.cpp
src/native/win32/: Win32RawIO.cpp  Win32VirtualDiskMountProvider.cpp
src/task/: VolumeBackupTask.cpp  VolumeBlockHasher.cpp  VolumeBlockReader.cpp  VolumeBlockWriter.cpp  VolumeProtectTaskContext.cpp  VolumeRestoreTask.cpp  VolumeZeroCopyRestoreTask.cpp
test/: CMakeLists.txt  CodeCoverage.cmake  CommonUtilTest.cpp  VolumeBackupTest.cpp  VolumeMountTest.cpp
